amend: clean up class + id names, format pages

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-               <ul class="navbar-nav mx-auto" id="navigation-links">
+               <ul class="navbar-nav mx-auto" id="nav-main-links">
                   <li class="nav-item mr-2">
                      <a href="music.html" class="nav-link">Music</a>
                   </li>
@@ -39,7 +39,7 @@
                      <a href="contact.html" class="nav-link">Contact</a>
                   </li>
                </ul>
-               <ul class="navbar-nav ml-auto flex-row" id="social-links">
+               <ul class="navbar-nav ml-auto flex-row" id="nav-social-links">
                   <li class="nav-item mr-2">
                      <a href="http://www.facebook.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
                   </li>
@@ -60,8 +60,8 @@
       <section class="appear-first container">
          <div class="row">
             <div class="col-md-1 col-lg-2 d-none d-md-block"></div>
-            <div class="col-md-10 col-lg-8 text-center contact-info cta">
-               <div class="contact-content cta-content">
+            <div class="col-md-10 col-lg-8 text-center contact-info-box cta">
+               <div class="contact-info-content cta-content">
                   <div id="enquiries">
                      <h2>General Enquiries <i class="fas fa-question-circle" aria-hidden="true"></i><span class="sr-only">Question Mark</span></h2>
                      <p class="text-wrap">littleparadise.bris@gmail.com</p>
@@ -93,7 +93,7 @@
       <footer>
          <div>
             <h4 id="footer-heading"><a href="index.html">Little Paradise</a></h4>
-            <ul id="footer-social">
+            <ul id="footer-social-links">
                <li>
                   <a href="http://www.facebook.com/" target="_blank" rel="external"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
                </li>
