--- a/gallery.html
+++ b/gallery.html
@@ -22,7 +22,7 @@
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-               <ul class="navbar-nav mx-auto" id="navigation-links">
+               <ul class="navbar-nav mx-auto" id="nav-main-links">
                   <li class="nav-item mr-2">
                      <a href="music.html" class="nav-link">Music</a>
                   </li>
@@ -39,7 +39,7 @@
                      <a href="contact.html" class="nav-link">Contact</a>
                   </li>
                </ul>
-               <ul class="navbar-nav ml-auto flex-row" id="social-links">
+               <ul class="navbar-nav ml-auto flex-row" id="nav-social-links">
                   <li class="nav-item mr-2">
                      <a href="http://www.facebook.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
                   </li>
@@ -136,7 +136,7 @@
       <footer>
          <div>
             <h4 id="footer-heading"><a href="index.html">Little Paradise</a></h4>
-            <ul id="footer-social">
+            <ul id="footer-social-links">
                <li>
                   <a href="http://www.facebook.com/" target="_blank" rel="external"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
                </li>
