--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-               <ul class="navbar-nav mx-auto" id="navigation-links">
+               <ul class="navbar-nav mx-auto" id="nav-main-links">
                   <li class="nav-item mr-2">
                      <a href="music.html" class="nav-link">Music</a>
                   </li>
@@ -39,7 +39,7 @@
                      <a href="contact.html" class="nav-link">Contact</a>
                   </li>
                </ul>
-               <ul class="navbar-nav ml-auto flex-row" id="social-links">
+               <ul class="navbar-nav ml-auto flex-row" id="nav-social-links">
                   <li class="nav-item mr-2">
                      <a href="http://www.facebook.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
                   </li>
@@ -61,14 +61,14 @@
          <div class="row">
             <div class="col-md-1 d-none d-md-block col-xl-2"></div>
             <div class="col-12 col-md-10 col-xl-8" id="hero-outer">
+               <!-- credit: hero image loading bug fix found on https://github.com/scott-little/lazyload -->
                <img src="assets/images/hero-image-min.jpg"
                   loading="eager" alt="Drawing of band standing next to Little Paradise road sign" class="img-fluid" id="hero-image">
-               <!-- credit: hero image loading bug fix found on https://github.com/scott-little/lazyload -->
             </div>
             <div class="col-md-1 d-none d-md-block col-xl-2"></div>
          </div>
       </section>
-      <section class="container appear-second max-width-reduce" id="cta-section">
+      <section class="container appear-second max-width-reduce" id="index-cta-section">
          <div class="row">
             <div class="col-md-1 d-none d-md-block"></div>
             <div class="col-12 col-md-4 cta">
@@ -88,7 +88,7 @@
          </div>
       </section>
       <hr class="appear-second">
-      <section class="container appear-third" id="index-music">
+      <section class="container appear-third" id="index-music-section">
          <div class="alt-font">
             <h3 class="index-header">Latest Video</h3>
             <div class="row">
@@ -108,7 +108,7 @@
                <div class="col-sm-2 col-md-3 col-lg-4 d-none d-sm-block"></div>
                <div class="col-12 col-sm-8 col-md-6 col-lg-4 cta" id="music-cta">
                   <h5>Listen to more on our dedicated Music Page <i class="fas fa-volume-up" aria-hidden="true"></i></h5>
-                  <a id="listen" class="btn btn-primary btn-lg cta-button" href="music.html" role="button">Listen</a>
+                  <a id="listen-button" class="btn btn-primary btn-lg cta-button" href="music.html" role="button">Listen</a>
                </div>
                <div class="col-sm-2 col-md-3 col-lg-4 d-none d-sm-block"></div>
             </div>
@@ -172,7 +172,7 @@
       <footer>
          <div>
             <h4 id="footer-heading"><a href="index.html">Little Paradise</a></h4>
-            <ul id="footer-social">
+            <ul id="footer-social-links">
                <li>
                   <a href="http://www.facebook.com/" target="_blank" rel="external"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
                </li>
@@ -200,11 +200,11 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
          integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
          crossorigin="anonymous"></script>
+      <!-- credit: code snippet by Marta Szymanska found on https://mdbootstrap.com/support/general/auto-close-navbar-when-click-on-link-responsive-mode/ -->
       <script>
          $('.navbar-collapse a').click(function(){
              $(".navbar-collapse").collapse('hide');
          });
       </script>
-      <!-- credit: code snippet by Marta Szymanska found on https://mdbootstrap.com/support/general/auto-close-navbar-when-click-on-link-responsive-mode/ -->
    </body>
 </html>
