--- a/music.html
+++ b/music.html
@@ -22,7 +22,7 @@
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-               <ul class="navbar-nav mx-auto" id="navigation-links">
+               <ul class="navbar-nav mx-auto" id="nav-main-links">
                   <li class="nav-item mr-2 active">
                      <a href="music.html" class="nav-link">Music</a>
                   </li>
@@ -39,7 +39,7 @@
                      <a href="contact.html" class="nav-link">Contact</a>
                   </li>
                </ul>
-               <ul class="navbar-nav ml-auto flex-row" id="social-links">
+               <ul class="navbar-nav ml-auto flex-row" id="nav-social-links">
                   <li class="nav-item mr-2">
                      <a href="http://www.facebook.com/" target="_blank" rel="external" class="nav-link"><i class="fab fa-facebook"></i><span class="sr-only">Facebook</span></a>
                   </li>
@@ -62,10 +62,10 @@
          <div class="row">
             <div class="col-lg-2 col-xl-1"></div>
             <div class="col-lg-8 col-xl-10 px-0">
+               <!-- credit: mobile overlay fix (show_teaser=false) found at https://stackoverflow.com/questions/39625513/soundcloud-embedded-player-on-mobile -->
                <iframe id="soundcloud-iframe" height="450" allow="autoplay" title="Little Paradise SoundCloud playlist"
                   src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1198539133%3Fsecret_token%3Ds-Cyoh8oGvIPB&color=%23d85656&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=false&visual=true"></iframe>
                <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>
-               <!-- credit: mobile overlay fix (show_teaser=false) found at https://stackoverflow.com/questions/39625513/soundcloud-embedded-player-on-mobile -->
             </div>
             <div class="col-lg-2 col-xl-1"></div>
          </div>
@@ -91,7 +91,7 @@
                   <div class="card-body">
                      <h3 class="text-center">Little Paradise EP</h3>
                      <p class="card-text text-center">(2021)</p>
-                     <a class="btn btn-primary btn-lg justify-content-center cta-button" id="buy-now" href="http://www.oddsocksband.bandcamp.com/" role="button" target="_blank" rel="external">Buy
+                     <a class="btn btn-primary btn-lg justify-content-center cta-button" id="buy-now-button" href="http://www.oddsocksband.bandcamp.com/" role="button" target="_blank" rel="external">Buy
                      Now</a>
                   </div>
                </div>
@@ -101,7 +101,7 @@
       <footer>
          <div>
             <h4 id="footer-heading"><a href="index.html">Little Paradise</a></h4>
-            <ul id="footer-social">
+            <ul id="footer-social-links">
                <li>
                   <a href="http://www.facebook.com/" target="_blank" rel="external"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
                </li>
