amend: heading levels to comply with accessibility

--- a/gallery.html
+++ b/gallery.html
@@ -135,7 +135,7 @@
       </section>
       <footer>
          <div>
-            <h4 id="footer-heading"><a href="index.html">Little Paradise</a></h4>
+            <span id="footer-heading"><a href="index.html">Little Paradise</a></span>
             <ul id="footer-social-links">
                <li>
                   <a href="http://www.facebook.com/" target="_blank" rel="external"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
