--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <hr class="appear-second">
       <section class="container appear-third" id="index-music-section">
          <div class="alt-font">
-            <h3 class="index-header">Latest Video</h3>
+            <h2 class="index-header">Latest Video</h2>
             <div class="row">
                <div class="col-lg-2 d-none d-lg-block"></div>
                <div class="col-lg-8" id="index-youtube">
@@ -107,7 +107,7 @@
             <div class="row music-alert">
                <div class="col-sm-2 col-md-3 col-lg-4 d-none d-sm-block"></div>
                <div class="col-12 col-sm-8 col-md-6 col-lg-4 cta" id="music-cta">
-                  <h5>Listen to more on our dedicated Music Page <i class="fas fa-volume-up" aria-hidden="true"></i></h5>
+                  <h3>Listen to more on our dedicated Music Page <i class="fas fa-volume-up" aria-hidden="true"></i></h3>
                   <a id="listen-button" class="btn btn-primary btn-lg cta-button" href="music.html" role="button">Listen</a>
                </div>
                <div class="col-sm-2 col-md-3 col-lg-4 d-none d-sm-block"></div>
@@ -116,11 +116,11 @@
       </section>
       <hr>
       <section class="container alt-font" id="tour-dates">
-         <h3 class="index-header">Tour Dates</h3>
+         <h2 class="index-header">Tour Dates</h2>
          <div class="row">
             <div class="col-md-1 d-none d-md-block"></div>
             <div class="col-12 col-md-4">
-               <h4>7 May 2021</h4>
+               <h3 class="date">7 May 2021</h3>
             </div>
             <div class="col-12 col-md-5 venue">
                <p>The Louisiana, Bristol</p>
@@ -133,7 +133,7 @@
          <div class="row">
             <div class="col-md-1 d-none d-md-block"></div>
             <div class="col-12 col-md-4">
-               <h4>6 July 2021</h4>
+               <h3 class="date">6 July 2021</h3>
             </div>
             <div class="col-12 col-md-5 venue">
                <p>Mr Wolf's, Bristol</p>
@@ -146,7 +146,7 @@
          <div class="row">
             <div class="col-md-1 d-none d-md-block"></div>
             <div class="col-12 col-md-4">
-               <h4>14 July 2021</h4>
+               <h3 class="date">14 July 2021</h3>
             </div>
             <div class="col-12 col-md-5 venue">
                <p>SWX, Bristol</p>
@@ -159,7 +159,7 @@
          <div class="row">
             <div class="col-md-1 d-none d-md-block"></div>
             <div class="col-12 col-md-4">
-               <h4>20 July 2021</h4>
+               <h3 class="date">20 July 2021</h3>
             </div>
             <div class="col-12 col-md-5 venue">
                <p>Student's Union, Bristol</p>
@@ -171,7 +171,7 @@
       </section>
       <footer>
          <div>
-            <h4 id="footer-heading"><a href="index.html">Little Paradise</a></h4>
+            <span id="footer-heading"><a href="index.html">Little Paradise</a></span>
             <ul id="footer-social-links">
                <li>
                   <a href="http://www.facebook.com/" target="_blank" rel="external"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
