--- a/music.html
+++ b/music.html
@@ -71,7 +71,7 @@
          </div>
       </section>
       <section class="music-content appear-second container">
-         <h2 class="music-heading">YouTube <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube" id="youtube-logo" aria-hidden="true"></i><span class="sr-only">Youtube</span></a></h2>
+         <h2 class="music-heading">YouTube <a href="https://www.youtube.com/channel/UCRN1cWLGIFh-nX8_fSF7lbg" target="_blank"><i class="fab fa-youtube" id="youtube-logo" aria-hidden="true"></i><span class="sr-only">Youtube</span></a></h2>
          <div class="row">
             <div class="col-lg-2"></div>
             <div class="col-lg-8 px-0">
@@ -106,7 +106,7 @@
                   <a href="http://www.facebook.com/" target="_blank" rel="external"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
                </li>
                <li>
-                  <a href="http://www.youtube.com/" target="_blank" rel="external"><i class="fab fa-youtube" aria-hidden="true"></i><span class="sr-only">Youtube</span></a>
+                  <a href="https://www.youtube.com/channel/UCRN1cWLGIFh-nX8_fSF7lbg" target="_blank" rel="external"><i class="fab fa-youtube" aria-hidden="true"></i><span class="sr-only">Youtube</span></a>
                </li>
                <li>
                   <a href="http://www.instagram.com/" target="_blank" rel="external"><i class="fab fa-instagram" aria-hidden="true"></i><span class="sr-only">Instagram</span></a>
