add: comments to html files, beautify css

--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
       <link rel="stylesheet" href="assets/css/style.css">
    </head>
    <body>
+      <!-- Nav bar -->
       <header>
          <nav class="navbar navbar-light navbar-expand-md fixed-top">
             <a href="index.html" class="navbar-brand">Little Paradise</a>
@@ -58,6 +59,7 @@
          </nav>
       </header>
       <h1 class="appear-first">About</h1>
+      <!-- About section + images -->
       <section class="container appear-second" id="about-section">
          <div class="row">
             <div class="col-md-8 offset-md-2 col-lg-7 offset-lg-0 col-xl-6">
@@ -107,6 +109,7 @@
             </div>
          </div>
       </section>
+      <!-- Footer -->
       <footer>
          <div>
             <span id="footer-heading"><a href="index.html">Little Paradise</a></span>
