--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
       <link rel="stylesheet" href="assets/css/style.css">
    </head>
    <body>
+      <!-- Nav bar -->
       <header>
          <nav class="navbar navbar-light navbar-expand-md fixed-top">
             <a href="index.html" class="navbar-brand">Little Paradise</a>
@@ -58,6 +59,7 @@
          </nav>
       </header>
       <h1 class="appear-first">Contact</h1>
+      <!-- Contact information box -->
       <section class="appear-first container">
          <div class="row">
             <div class="col-md-1 col-lg-2 d-none d-md-block"></div>
@@ -77,6 +79,7 @@
             <div class="col-md-1 col-lg-2 d-none d-md-block"></div>
          </div>
       </section>
+      <!-- Email updates form -->
       <section class="container appear-first cta max-width-reduce" id="email-form">
          <form>
             <h3 class="alt-font">Join Our Mailing List! <i class="fas fa-envelope-open-text" aria-hidden="true"></i><span class="sr-only">Envelope</span></h3>
@@ -91,6 +94,7 @@
             <button type="submit" class="btn btn-primary btn-lg cta-button" id="email-button">Sign Up</button>
          </form>
       </section>
+      <!-- Footer -->
       <footer>
          <div>
             <span id="footer-heading"><a href="index.html">Little Paradise</a></span>
