--- a/gallery.html
+++ b/gallery.html
@@ -15,6 +15,7 @@
       <link rel="stylesheet" href="assets/css/style.css">
    </head>
    <body>
+      <!-- Nav bar -->
       <header>
          <nav class="navbar navbar-light navbar-expand-md fixed-top">
             <a href="index.html" class="navbar-brand">Little Paradise</a>
@@ -58,6 +59,7 @@
          </nav>
       </header>
       <h1 class="appear-first">Gallery</h1>
+      <!-- Images gallery -->
       <section id="gallery" class="container-fluid appear-second">
          <div class="row">
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
@@ -134,6 +136,7 @@
             </div>
          </div>
       </section>
+      <!-- Footer -->
       <footer>
          <div>
             <span id="footer-heading"><a href="index.html">Little Paradise</a></span>
