--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <link rel="stylesheet" href="assets/css/style.css">
    </head>
    <body>
+      <!-- Nav bar -->
       <header>
          <nav class="navbar navbar-light navbar-expand-md fixed-top appear-second">
             <a href="index.html" class="navbar-brand">Little Paradise</a>
@@ -57,6 +58,7 @@
             </div>
          </nav>
       </header>
+      <!-- Hero image -->
       <section class="appear-first container-fluid">
          <h1 class="sr-only">Little Paradise - Bristol's best indie band</h1>
          <div class="row">
@@ -69,6 +71,7 @@
             <div class="col-md-1 d-none d-md-block col-xl-2"></div>
          </div>
       </section>
+      <!-- Call to action boxes -->
       <section class="container appear-second max-width-reduce" id="index-cta-section">
          <div class="row">
             <div class="col-md-1 d-none d-md-block"></div>
@@ -89,6 +92,7 @@
          </div>
       </section>
       <hr class="appear-second">
+      <!-- Music video -->
       <section class="container appear-third" id="index-music-section">
          <div class="alt-font">
             <h2 class="index-header">Latest Video</h2>
@@ -116,6 +120,7 @@
          </div>
       </section>
       <hr>
+      <!-- Tour Dates -->
       <section class="container alt-font" id="tour-dates">
          <h2 class="index-header">Tour Dates</h2>
          <div class="row">
@@ -170,6 +175,7 @@
          <hr>
          <br>
       </section>
+      <!-- Footer -->
       <footer>
          <div>
             <span id="footer-heading"><a href="index.html">Little Paradise</a></span>
