--- a/music.html
+++ b/music.html
@@ -15,6 +15,7 @@
       <link rel="stylesheet" href="assets/css/style.css">
    </head>
    <body>
+      <!-- Nav bar -->
       <header>
          <nav class="navbar navbar-light navbar-expand-md fixed-top">
             <a href="index.html" class="navbar-brand">Little Paradise</a>
@@ -58,6 +59,7 @@
          </nav>
       </header>
       <h1 class="appear-first">Music</h1>
+      <!-- Soundcloud playlist -->
       <section class="music-content appear-second container">
          <h2 class="music-heading">SoundCloud <a href="https://soundcloud.com/little-paradise-bristol" target="_blank"><i class="fab fa-soundcloud" id="soundcloud-logo" aria-hidden="true"></i><span class="sr-only">Soundcloud</span></a></h2>
          <div class="row">
@@ -71,6 +73,7 @@
             <div class="col-lg-2 col-xl-1"></div>
          </div>
       </section>
+      <!-- Music video -->
       <section class="music-content appear-second container">
          <h2 class="music-heading">YouTube <a href="https://www.youtube.com/channel/UCRN1cWLGIFh-nX8_fSF7lbg" target="_blank"><i class="fab fa-youtube" id="youtube-logo" aria-hidden="true"></i><span class="sr-only">Youtube</span></a></h2>
          <div class="row">
@@ -82,6 +85,7 @@
             <div class="col-lg-2"></div>
          </div>
       </section>
+      <!-- Releases section -->
       <section class="container music-content appear-second" id="release-section">
          <h2 class="music-heading">Releases <i class="fas fa-compact-disc" aria-hidden="true"></i><span class="sr-only">CD</span></h2>
          <div class="row">
@@ -99,6 +103,7 @@
             </div>
          </div>
       </section>
+      <!-- Footer -->
       <footer>
          <div>
             <span id="footer-heading"><a href="index.html">Little Paradise</a></span>
