--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
       </section>
       <hr>
       <!-- Tour Dates -->
-      <section class="container alt-font" id="tour-dates">
+      <section class="container alt-font" id="tour-dates-section">
          <h2 class="index-header">Tour Dates</h2>
-         <div class="row">
+         <div class="row tour-dates-content">
             <div class="col-md-1 d-none d-md-block"></div>
             <div class="col-12 col-md-4">
                <h3 class="date">7 May 2021</h3>
@@ -134,9 +134,7 @@
             <div class="col-12 col-md-2"><a class="btn btn-dark ticket-button" href="http://www.ticketmaster.com" role="button"
                target="_blank">TICKETS</a></div>
          </div>
-         <hr>
-         <br>
-         <div class="row">
+         <div class="row tour-dates-content">
             <div class="col-md-1 d-none d-md-block"></div>
             <div class="col-12 col-md-4">
                <h3 class="date">6 July 2021</h3>
@@ -147,9 +145,7 @@
             <div class="col-12 col-md-2"><a class="btn btn-dark ticket-button" href="http://www.ticketmaster.com" role="button"
                target="_blank">TICKETS</a></div>
          </div>
-         <hr>
-         <br>
-         <div class="row">
+         <div class="row tour-dates-content">
             <div class="col-md-1 d-none d-md-block"></div>
             <div class="col-12 col-md-4">
                <h3 class="date">14 July 2021</h3>
@@ -160,9 +156,7 @@
             <div class="col-12 col-md-2"><a class="btn btn-dark ticket-button" href="http://www.ticketmaster.com" role="button"
                target="_blank">TICKETS</a></div>
          </div>
-         <hr>
-         <br>
-         <div class="row">
+         <div class="row tour-dates-content">
             <div class="col-md-1 d-none d-md-block"></div>
             <div class="col-12 col-md-4">
                <h3 class="date">20 July 2021</h3>
@@ -172,8 +166,6 @@
             </div>
             <div class="col-12 col-md-2"><button type="button" class="btn btn-dark" disabled>SOLD OUT</button></div>
          </div>
-         <hr>
-         <br>
       </section>
       <!-- Footer -->
       <footer>
