fix: tour dates bug on nav bar

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
                      <a href="music.html" class="nav-link">Music</a>
                   </li>
                   <li class="nav-item mr-2">
-                     <a href="index.html#tour-dates" class="nav-link">Tour</a>
+                     <a href="index.html#tour-dates-section" class="nav-link">Tour</a>
                   </li>
                   <li class="nav-item mr-2">
                      <a href="gallery.html" class="nav-link">Gallery</a>
@@ -97,7 +97,7 @@
                            </div>
                            <div class="col about-cta">
                               <p><em>Live shows:</em></p>
-                              <a class="btn btn-primary btn-lg about-button cta-button" href="index.html#tour-dates" role="button">Tour</a>  
+                              <a class="btn btn-primary btn-lg about-button cta-button" href="index.html#tour-dates-section" role="button">Tour</a>  
                            </div>
                         </div>
                      </div>
