--- a/music.html
+++ b/music.html
@@ -29,7 +29,7 @@
                      <a href="music.html" class="nav-link">Music</a>
                   </li>
                   <li class="nav-item mr-2">
-                     <a href="index.html#tour-dates" class="nav-link">Tour</a>
+                     <a href="index.html#tour-dates-section" class="nav-link">Tour</a>
                   </li>
                   <li class="nav-item mr-2">
                      <a href="gallery.html" class="nav-link">Gallery</a>
