fix: releases card bug at 280px

--- a/music.html
+++ b/music.html
@@ -90,7 +90,7 @@
          <h2 class="music-heading">Releases <i class="fas fa-compact-disc" aria-hidden="true"></i><span class="sr-only">CD</span></h2>
          <div class="row">
             <div class="col-12">
-               <div class="card mx-auto releases" style="width: 18rem;">
+               <div class="card mx-auto releases">
                   <a href="https//www.bandcamp.com"><img src="assets/images/hero-image-min.jpg" class="card-img-top"
                      alt="Little Paradise EP purchase link"></a>
                   <div class="card-body">
